# CloudSentinel.

./: .coverage  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cloudsentinel_report_000000000000.html  cloudsentinel_report_000000000000.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cloudsentinel/: cli.py  models.py  reporter.py  scanner.py  utils.py
cloudsentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cloudsentinel/checks/: __init__.py  cloudtrail.py  ec2.py  iam.py  mfa.py  s3.py  security_groups.py
templates/: report.html
tests/: test_checks.py  test_cli.py  test_reporter.py  test_scanner.py
