[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsentinel"
version = "1.0.0"
description = "Production-grade open-source AWS Cloud Misconfiguration Scanner"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CloudSentinel Contributors" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]
dependencies = [
    "boto3>=1.28.0",
    "typer>=0.9.0",
    "rich>=13.5.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "moto[ec2,s3,iam,cloudtrail,sts]>=4.2.0",
    "ruff>=0.1.0",
    "black>=23.7.0"
]

[project.scripts]
cloudsentinel = "cloudsentinel.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudsentinel*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']
